[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/Player/Player_Default/survivor1_gun.png" type="Texture" id=1]
[ext_resource path="res://codes/player_code.gd" type="Script" id=2]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.0
height = 18.0

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 12.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Collision_Main" type="CollisionShape2D" parent="."]
light_mask = 3
position = Vector2( -9, 0 )
shape = SubResource( 1 )

[node name="Model" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Gun_Default" type="Position2D" parent="."]
position = Vector2( 32, 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 3

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -7, 2 )
shape = SubResource( 3 )

[node name="PlayerHunt" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHunt"]
position = Vector2( -9, 3 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Stair_Area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stair_Area"]
light_mask = 16
position = Vector2( 13, 1 )
shape = SubResource( 5 )

[node name="Bullets" type="Node2D" parent="."]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Stair_Area" to="." method="_on_Stair_Area_area_entered"]
[connection signal="area_exited" from="Stair_Area" to="." method="_on_Stair_Area_area_exited"]

[editable path="Hurtbox"]
